@@ -3,6 +3,7 @@ $Id$
 2013-01-26  Christian Franke  <franke@computer.org>
 
 	Windows smartd: Add eventlog MESSAGETABLE resource.
+	Install/remove smartd.exe as event message file.
 
 2013-01-26  Christian Franke  <franke@computer.org>
 
